--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -25,7 +25,7 @@
             android:text="Car"
             android:textAlignment="center"
             android:textColor="@color/whiteText"
-            android:textSize="18sp"
+            android:textSize="@dimen/xlarge_text"
             />
 
         <TextView
@@ -37,7 +37,7 @@
             android:text=" &#64; "
             android:textAlignment="center"
             android:textColor="#f5f5f5"
-            android:textSize="18sp"
+            android:textSize="@dimen/xlarge_text"
             />
 
         <TextView
@@ -50,7 +50,7 @@
             android:text="Track"
             android:textAlignment="center"
             android:textColor="@color/whiteText"
-            android:textSize="18sp"
+            android:textSize="@dimen/xlarge_text"
             />
     </LinearLayout>
 
@@ -69,7 +69,7 @@
             android:text="Kmh"
             android:textAlignment="center"
             android:textColor="#f5f5f5"
-            android:textSize="18sp"
+            android:textSize="@dimen/xlarge_text"
             />
 
         <TextView
@@ -78,11 +78,11 @@
             android:layout_height="wrap_content"
             android:layout_weight="5"
             android:ems="3"
-            android:padding="@dimen/digits_padding"
-            android:text="0"
+            android:text="320"
             android:textAlignment="center"
-            android:textColor="@color/whiteText"
-            android:textSize="@dimen/large_text"
+            android:textColor="@color/blackText"
+            android:background="@color/whiteText"
+            android:textSize="@dimen/xxlarge_text"
             android:typeface="monospace"
             />
 
@@ -92,11 +92,11 @@
             android:layout_height="wrap_content"
             android:layout_weight="5"
             android:ems="3"
-            android:padding="@dimen/digits_padding"
-            android:text="0"
+            android:text="320"
             android:textAlignment="center"
-            android:textColor="@android:color/holo_red_dark"
-            android:textSize="@dimen/large_text"
+            android:background="@color/red_600"
+            android:textColor="@color/whiteText"
+            android:textSize="@dimen/xxlarge_text"
             android:typeface="monospace"
             />
 
@@ -109,7 +109,7 @@
             android:text="Lap"
             android:textAlignment="center"
             android:textColor="#f5f5f5"
-            android:textSize="18sp"
+            android:textSize="@dimen/xlarge_text"
             />
 
         <TextView
@@ -121,7 +121,7 @@
             android:text="--:--:---"
             android:textAlignment="center"
             android:textColor="@color/green300"
-            android:textSize="@dimen/large_text"
+            android:textSize="@dimen/xxlarge_text"
             android:typeface="monospace"
             />
 
@@ -134,7 +134,7 @@
             android:text="Last"
             android:textAlignment="center"
             android:textColor="#f5f5f5"
-            android:textSize="18sp"
+            android:textSize="@dimen/xlarge_text"
             />
 
         <TextView
@@ -146,7 +146,7 @@
             android:text="--:--:---"
             android:textAlignment="center"
             android:textColor="@color/amber300"
-            android:textSize="@dimen/large_text"
+            android:textSize="@dimen/xxlarge_text"
             android:typeface="monospace"
             />
 
@@ -159,7 +159,7 @@
             android:text="Best"
             android:textAlignment="center"
             android:textColor="#f5f5f5"
-            android:textSize="18sp"
+            android:textSize="@dimen/xlarge_text"
             />
 
         <TextView
@@ -171,7 +171,7 @@
             android:text="--:--:---"
             android:textAlignment="center"
             android:textColor="@color/indigo300"
-            android:textSize="@dimen/large_text"
+            android:textSize="@dimen/xxlarge_text"
             android:typeface="monospace"
             />
 
@@ -184,7 +184,7 @@
             android:text="Rec"
             android:textAlignment="center"
             android:textColor="#f5f5f5"
-            android:textSize="18sp"
+            android:textSize="@dimen/xlarge_text"
             />
 
         <TextView
@@ -196,7 +196,7 @@
             android:text="--:--:---"
             android:textAlignment="center"
             android:textColor="@color/record"
-            android:textSize="@dimen/large_text"
+            android:textSize="@dimen/xxlarge_text"
             android:typeface="monospace"
             />
     </LinearLayout>
@@ -228,7 +228,7 @@
                     android:text="Session"
                     android:textAlignment="center"
                     android:textColor="#fff"
-                    android:textSize="18sp"
+                    android:textSize="@dimen/large_text"
                     />
             </LinearLayout>
 
@@ -248,7 +248,7 @@
                     android:paddingTop="6dp"
                     android:textOn="ON"
                     android:textOff="OFF"
-                    android:textSize="14sp"/>
+                    android:textSize="@dimen/medium_text"/>
 
                 <Button
                     android:id="@+id/restart_btn"
@@ -261,7 +261,7 @@
                     android:paddingBottom="6dp"
                     android:paddingTop="6dp"
                     android:text="restart"
-                    android:textSize="14sp"/>
+                    android:textSize="@dimen/medium_text"/>
             </LinearLayout>
 
             <ImageView
@@ -281,7 +281,7 @@
                 android:fadeScrollbars="false"
                 android:scrollbarSize="4dp"
                 android:scrollbarThumbVertical="@android:color/holo_blue_dark"
-                android:textSize="18sp"
+                android:textSize="@dimen/xlarge_text"
                 android:typeface="monospace"
                 android:visibility="visible"/>
         </LinearLayout>
@@ -307,7 +307,7 @@
                     android:text="Database"
                     android:textAlignment="center"
                     android:textColor="#fff"
-                    android:textSize="18sp"
+                    android:textSize="@dimen/large_text"
                     />
             </LinearLayout>
 
@@ -408,7 +408,7 @@
                 android:fadeScrollbars="false"
                 android:scrollbarSize="5dp"
                 android:scrollbarThumbVertical="@android:color/holo_blue_dark"
-                android:textSize="18sp"
+                android:textSize="@dimen/xlarge_text"
                 android:typeface="monospace"
                 android:visibility="visible"/>
         </LinearLayout>
