--- a/app/src/main/res/layout-sw600dp/session_list_item.xml
+++ b/app/src/main/res/layout-sw600dp/session_list_item.xml
@@ -18,7 +18,7 @@
         android:text="Lap number"
         android:maxLines="1"
         android:textColor="@color/whiteText"
-        android:textSize="18sp"/>
+        android:textSize="@dimen/xlarge_text"/>
 
     <TextView
         android:id="@+id/laptime_tv"
@@ -29,7 +29,7 @@
         android:paddingStart="8dp"
         android:text="Laptime"
         android:maxLines="1"
-        android:textSize="18sp"
+        android:textSize="@dimen/xlarge_text"
         android:textColor="@color/whiteText"
         android:gravity="center"/>
 
@@ -42,7 +42,7 @@
         android:paddingStart="8dp"
         android:text="Gap"
         android:maxLines="1"
-        android:textSize="18sp"
+        android:textSize="@dimen/xlarge_text"
         android:textColor="@color/whiteText"
         android:gravity="end"/>
 
