--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,8 @@
     <dimen name="small_text">14sp</dimen>
     <dimen name="medium_text">16sp</dimen>
     <dimen name="large_text">18sp</dimen>
+    <dimen name="xlarge_text">22sp</dimen>
+    <dimen name="xxlarge_text">26sp</dimen>
 
     <dimen name="digits_padding">8dp</dimen>
     <dimen name="digits_small_padding">4dp</dimen>
